Fix social media links fix on tablets and desktop by adjusting the margins

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -323,6 +323,10 @@ form button {
         font-weight: bold;
     }
 
+    footer li{
+        margin: 0 20px;
+    }
+
     div.tog-box {
         display: none;
     }
